--- a/package.json
+++ b/package.json
@@ -1,26 +1,1 @@
-{
-  "name": "ar-furniture",
-  "version": "1.0.0",
-  "description": "AR Furniture Viewer - WebAR application for furniture visualization",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step needed for static files'"
-  },
-  "keywords": ["ar", "webxr", "furniture", "threejs", "qrcode"],
-  "author": "AR Furniture Team",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "qrcode": "^1.5.3",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
-} 
+{"name":"ar-furniture-modelviewer","version":"1.0.0","description":"AR Furniture with Model-viewer","main":"server.js","scripts":{"start":"node server.js","dev":"node server.js"},"dependencies":{"express":"^4.18.2"},"engines":{"node":">=14.0.0"}}
